# galgame-cocos2d-x-using-copilot-claude-haiku

./: CMakeLists.txt  README.md
include/: GalGameScene.h
include/background/: BackgroundManager.h
include/character/: CharacterManager.h
include/script/: DialogueManager.h  ScriptEngine.h  ScriptInterpreter.h
include/ui/: ChoiceBox.h  DialogueBox.h
scripts/: game.gal
src/: GalGameScene.cpp  main.cpp
src/background/: BackgroundManager.cpp
src/character/: CharacterManager.cpp
src/script/: DialogueManager.cpp  ScriptEngine.cpp  ScriptInterpreter.cpp
src/ui/: ChoiceBox.cpp  DialogueBox.cpp
